--- a/src/main/java/view/QuanLyKhachHangPanel.form
+++ b/src/main/java/view/QuanLyKhachHangPanel.form
@@ -103,6 +103,7 @@
             </Property>
           </Properties>
           <Events>
+            <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="tblKhachHangFocusGained"/>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tblKhachHangMouseClicked"/>
           </Events>
         </Component>
