--- a/src/main/java/view/QuanLyDonGiatPanel.form
+++ b/src/main/java/view/QuanLyDonGiatPanel.form
@@ -105,6 +105,7 @@
           </Properties>
           <Events>
             <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="tblDonHangFocusGained"/>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tblDonHangMouseClicked"/>
           </Events>
         </Component>
       </SubComponents>
