--- a/src/main/java/view/ThongKeVaBaoCaoPanel.form
+++ b/src/main/java/view/ThongKeVaBaoCaoPanel.form
@@ -96,6 +96,9 @@
               </Table>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tblThongKeMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
